# CN-SimplifiedToTraditional

./: Cargo.toml  Dockerfile  README.md
src/: main.rs  map_simple_to_traditional.rs
