[package]
name = "cn_simplified_to_traditional"
version = "0.1.0"
authors = ["Jax0312 <jaxonmoh05@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.1", features = ["json"]}
serde = "1.0.130"
maplit = "1.0.2"
