[package]
name = "cn_simplified_to_traditional"
version = "0.1.0"
authors = ["Jax0312 <jaxonmoh05@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version= "1.0.130", features = ["derive"]}
maplit = "1.0.2"
actix-cors = "0.6.4"
